Update mirror config

--- a/mirror-linux.conf
+++ b/mirror-linux.conf
@@ -1,9 +1,10 @@
 [mirror]
-directory = /mnt/e/russe/pypiMirror/bandersnatch
+directory = /mnt/pypiMirror/bandersnatch
 master = https://pypi.org
 timeout = 20
+global-timeout = 18000
 stop-on-error = false
-workers = 3
+workers = 1
 hash-index = false
 json = False
 
