--- a/mirror-windows.conf
+++ b/mirror-windows.conf
@@ -1,9 +1,10 @@
 [mirror]
-directory = E:\russe\pypiMirror\bandersnatch
+directory = D:\pypiMirror\bandersnatch
 master = https://pypi.org
 timeout = 20
+global-timeout = 18000
 stop-on-error = false
-workers = 3
+workers = 1
 hash-index = false
 json = False
 
