Make improvements to the main scripts and bandersnatch config using codex

--- a/mirror-linux.conf
+++ b/mirror-linux.conf
@@ -4,19 +4,21 @@ master = https://pypi.org
 timeout = 20
 global-timeout = 18000
 stop-on-error = false
-workers = 1
-hash-index = false
-json = False
+workers = 3
+hash-index = true
+json = true
 
 [plugins]
-enabled = 
+enabled =
+    regex_release_file_metadata
     allowlist_project
-    exclude_platform
 
-[blocklist]
-platforms = 
-    macos
-    freebsd
+# Keep only Windows x86-64 wheels and sdists (everything else is excluded)
+[regex_release_file_metadata]
+any:release_file.filename =
+    ^.*win_amd64.*\.whl$
+    ^.*\.tar\.gz$
+    ^.*\.zip$
 
 [allowlist]
 packages = 
