--- a/environment-windows.yml
+++ b/environment-windows.yml
@@ -2,41 +2,108 @@ name: bandersnatch
 channels:
   - conda-forge
 dependencies:
-  - bzip2=1.0.8=h8ffe710_4
-  - ca-certificates=2023.7.22=h56e8100_0
-  - libexpat=2.5.0=h63175ca_1
-  - libffi=3.4.2=h8ffe710_5
-  - libsqlite=3.42.0=hcfcfb64_0
-  - libzlib=1.2.13=hcfcfb64_5
-  - openssl=3.1.2=hcfcfb64_0
-  - pip=23.2.1=pyhd8ed1ab_0
-  - python=3.11.4=h2628c8c_0_cpython
-  - setuptools=68.1.2=pyhd8ed1ab_0
-  - tk=8.6.12=h8ffe710_0
-  - tzdata=2023c=h71feb2d_0
-  - ucrt=10.0.22621.0=h57928b3_0
-  - vc=14.3=h64f974e_17
-  - vc14_runtime=14.36.32532=hfdfe4a8_17
-  - vs2015_runtime=14.36.32532=h05e6639_17
-  - wheel=0.41.1=pyhd8ed1ab_0
-  - xz=5.2.6=h8d14728_0
+  - archspec=0.2.5=pyhd8ed1ab_0
+  - backports.zstd=1.3.0=py313h2a31948_0
+  - boltons=25.0.0=pyhd8ed1ab_0
+  - brotli-python=1.2.0=py313h3ebfc14_1
+  - bzip2=1.0.8=h0ad9c76_8
+  - ca-certificates=2026.1.4=h4c7d964_0
+  - certifi=2026.1.4=pyhd8ed1ab_0
+  - cffi=2.0.0=py313h5ea7bf4_1
+  - charset-normalizer=3.4.4=pyhd8ed1ab_0
+  - colorama=0.4.6=pyhd8ed1ab_1
+  - conda=26.1.0=py313hfa70ccb_0
+  - conda-libmamba-solver=25.11.0=pyhd8ed1ab_0
+  - conda-package-handling=2.4.0=pyh7900ff3_2
+  - conda-package-streaming=0.12.0=pyhd8ed1ab_0
+  - cpp-expected=1.3.1=h477610d_0
+  - distro=1.9.0=pyhd8ed1ab_1
+  - fmt=12.1.0=h7f4e812_0
+  - frozendict=2.4.7=py313h5ea7bf4_0
+  - h2=4.3.0=pyhcf101f3_0
+  - hpack=4.1.0=pyhd8ed1ab_0
+  - hyperframe=6.1.0=pyhd8ed1ab_0
+  - icu=78.2=h637d24d_0
+  - idna=3.11=pyhd8ed1ab_0
+  - jsonpatch=1.33=pyhd8ed1ab_1
+  - jsonpointer=3.0.0=pyhcf101f3_3
+  - krb5=1.21.3=hdf4eb48_0
+  - libarchive=3.8.5=gpl_he24518a_100
+  - libcurl=8.18.0=h43ecb02_0
+  - libexpat=2.7.3=hac47afa_0
+  - libffi=3.5.2=h3d046cb_0
+  - libiconv=1.18=hc1393d2_2
+  - liblzma=5.8.2=hfd05255_0
+  - libmamba=2.5.0=h06825f5_0
+  - libmamba-spdlog=2.5.0=h9ae1bf1_0
+  - libmambapy=2.5.0=py313h2836bcb_0
+  - libmpdec=4.0.0=hfd05255_1
+  - libsolv=0.7.35=h8883371_0
+  - libsqlite=3.51.2=hf5d6505_0
+  - libssh2=1.11.1=h9aa295b_0
+  - libxml2=2.15.1=h779ef1b_1
+  - libxml2-16=2.15.1=h3cfd58e_1
+  - libzlib=1.3.1=h2466b09_2
+  - lz4-c=1.10.0=h2466b09_1
+  - lzo=2.10=h6a83c73_1002
+  - menuinst=2.4.2=py313hfe59770_0
+  - msgpack-python=1.1.2=py313hf069bd2_1
+  - nlohmann_json-abi=3.12.0=h0f90c79_1
+  - openssl=3.6.1=hf411b9b_1
+  - packaging=26.0=pyhcf101f3_0
+  - pip=26.0=pyh145f28c_0
+  - platformdirs=4.5.1=pyhcf101f3_0
+  - pluggy=1.6.0=pyhf9edf01_1
+  - pybind11-abi=11=hc364b38_1
+  - pycosat=0.6.6=py313h5ea7bf4_3
+  - pycparser=2.22=pyh29332c3_1
+  - pysocks=1.7.1=pyh09c184e_7
+  - python=3.13.11=h09917c8_101_cp313
+  - python_abi=3.13=8_cp313
+  - reproc=14.2.5.post0=h2466b09_0
+  - reproc-cpp=14.2.5.post0=he0c23c2_0
+  - requests=2.32.5=pyhcf101f3_1
+  - ruamel.yaml=0.18.17=py313h5fd188c_2
+  - ruamel.yaml.clib=0.2.15=py313h5fd188c_1
+  - setuptools=80.10.2=pyh332efcf_0
+  - simdjson=4.2.4=h49e36cd_0
+  - spdlog=1.17.0=h9f585f1_1
+  - tk=8.6.13=h6ed50ae_3
+  - tqdm=4.67.2=pyha7b4d00_2
+  - truststore=0.10.4=pyhcf101f3_0
+  - tzdata=2025c=hc9c84f9_1
+  - ucrt=10.0.26100.0=h57928b3_0
+  - urllib3=2.6.3=pyhd8ed1ab_0
+  - vc=14.3=h41ae7f8_34
+  - vc14_runtime=14.44.35208=h818238b_34
+  - vcomp14=14.44.35208=h818238b_34
+  - win_inet_pton=1.1.0=pyh7428d3b_8
+  - yaml-cpp=0.8.0=he0c23c2_0
+  - zstandard=0.25.0=py313h5fd188c_1
+  - zstd=1.5.7=h534d264_6
   - pip:
-      - aiohttp==3.8.5
-      - aiohttp-socks==0.8.0
+      - aiohappyeyeballs==2.6.1
+      - aiohttp==3.13.3
+      - aiohttp-socks==0.11.0
       - aiohttp-xmlrpc==1.5.0
-      - aiosignal==1.3.1
-      - async-timeout==4.0.3
-      - attrs==23.1.0
-      - bandersnatch==6.3.0
-      - charset-normalizer==3.2.0
-      - filelock==3.12.2
-      - frozenlist==1.4.0
+      - aiosignal==1.4.0
+      - attrs==25.4.0
+      - bandersnatch==7.1.0
+      - boto3==1.42.40
+      - botocore==1.42.40
+      - filelock==3.20.3
+      - frozenlist==1.8.0
       - humanfriendly==10.0
-      - idna==3.4
-      - lxml==4.9.3
-      - multidict==6.0.4
-      - packaging==23.1
-      - pyreadline3==3.4.1
-      - python-socks==2.3.0
-      - yarl==1.9.2
-prefix: C:\Users\russe\mambaforge\envs\bandersnatch
+      - jmespath==1.1.0
+      - lxml==6.0.2
+      - multidict==6.7.1
+      - propcache==0.4.1
+      - pyreadline3==3.5.4
+      - python-dateutil==2.9.0.post0
+      - python-socks==2.8.0
+      - s3path==0.6.5
+      - s3transfer==0.16.0
+      - six==1.17.0
+      - smart-open==7.5.0
+      - wrapt==2.1.1
+      - yarl==1.22.0
