Change storage backend to s3

--- a/mirror-linux.conf
+++ b/mirror-linux.conf
@@ -1,10 +1,12 @@
 [mirror]
-directory = /mnt/pypiMirror/bandersnatch
+; Use native S3 backend — no s3fs mount here
+storage-backend = s3
+directory = /s3fs-mount-s3-prod/hdbpypi
 master = https://pypi.org
-timeout = 20
+timeout = 120
 global-timeout = 18000
 stop-on-error = false
-workers = 3
+workers = 2
 hash-index = true
 json = true
 
@@ -22,3 +24,6 @@ any:release_file.filename =
 
 [allowlist]
 packages = 
+
+[s3]
+region_name = ap-southeast-1
