--- a/mirror-windows.conf
+++ b/mirror-windows.conf
@@ -1,24 +1,34 @@
 [mirror]
-directory = D:\pypiMirror\bandersnatch
+; Use native S3 backend — no s3fs mount here
+storage-backend = s3
+directory = /s3fs-mount-s3-prod/hdbpypi
+
 master = https://pypi.org
-timeout = 20
+
+; Main fix: be much more tolerant to slow reads
+timeout = 120
 global-timeout = 18000
-stop-on-error = false
-workers = 3
+
+; Reduce contention
+workers = 2
+
 hash-index = true
 json = true
+stop-on-error = false
 
 [plugins]
 enabled =
     regex_release_file_metadata
     allowlist_project
 
-# Keep only Windows x86-64 wheels and sdists (everything else is excluded)
 [regex_release_file_metadata]
 any:release_file.filename =
     ^.*win_amd64.*\.whl$
     ^.*\.tar\.gz$
     ^.*\.zip$
 
+[s3]
+region_name = ap-southeast-1
+
 [allowlist]
-packages = 
+packages =
